add button ToggleTocBtn

--- a/projects/bundle_tutorial/single_page_book_app/index.html
+++ b/projects/bundle_tutorial/single_page_book_app/index.html
@@ -15,10 +15,12 @@
     <div class="doc-layout-container" id="doc-layout-container">
         <header class="main-header">
             <div class="header-buttons">
+                <button id="toggle-toc-btn" class="header-btn" title="Toggle Sidebar">☰</button>
+
                 <a href="https://github.com" target="_blank" class="header-btn">GitHub</a>
             </div>
-            <button id="page-sections-btn" class="toggle-sidebar" title="Contents">
-                <span class="icon">📖</span>
+            <button id="page-sections-btn" class="header-btn" title="Contents">
+                <span class="icon">☰</span>
             </button>
         </header>
 
