tut: Move page-sections-panel right of #toc-and-doc

--- a/projects/bundle_tutorial/single_page_book_app/index.html
+++ b/projects/bundle_tutorial/single_page_book_app/index.html
@@ -36,11 +36,11 @@
             <main id="content-area-wrapper">
                 <div id="content-area"></div>
             </main>
+
+            <!-- page-sections-panel: This is where the page sections will be displayed in a panel which is hidden by default and slides from the right -->
+            <div id="page-sections-panel" class="page-sections"></div>
         </div>
 
-        <!-- page-sections-panel: This is where the page sections will be displayed
-     in a panel which is hidden by default and slides from the right -->
-        <div id="page-sections-panel" class="page-sections"></div>
 
     </div>
 
