work on deploy demos

--- a/projects/imgui_bundle_playground/index.html
+++ b/projects/imgui_bundle_playground/index.html
@@ -47,7 +47,7 @@
                 ">
             </a>
             <!-- Motto -->
-            <div id="motto">Real interactivity starts at 60FPS...</div>
+            <div id="motto">Live code, instant Web GUI. Pure Python: no CSS, no React, no fuss.</div>
         </div>
         <div id="header-right">
             <!-- Dropdown for Example Files -->
