--- a/projects/imgui_bundle_playground/index.html
+++ b/projects/imgui_bundle_playground/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>ImGui + Pyodide Demo</title>
+    <title>ImGui Playground</title>
     <!-- CodeMirror CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/codemirror.min.css">
     <!-- Optional: CodeMirror Theme -->
